src/objects/SIGN_SignedAgreement__c.object
<CustomObject>
    <fields>
        <fullName>ImageUrl__c</fullName>
        <label>Image Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <formula>IF( LEN( ImageUrl__c )&gt;0, IMAGE( ImageUrl__c, &quot;Thumbnail&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Page__c</fullName>
        <label>Page</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SIGN_Agreement__c</fullName>
        <label>Agreement</label>
        <referenceTo>SIGN_Agreement__c</referenceTo>
        <relationshipLabel>Signed Agreement</relationshipLabel>
        <relationshipName>R00N30000001RxRbEAK</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Signed Agreement</label>
    <nameField>
        <displayFormat>AP{000000}</displayFormat>
        <label>Agreement Page Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Signed Agreement</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>